--- a/wiki.html
+++ b/wiki.html
@@ -15,12 +15,17 @@
       <div class="row" id="mainR">
         <div class="col-2">
           <div class="wrap">
-            <img class="logo" src="" alt="logo">
+            <img class="logo" src="images/logo.png" alt="logo">
           </div>
           <div class="wrap">
             <ul class="sidebar">
-              <li>Test</li>
-              <li>This is a much longer label</li>
+              <li>Main page</li>
+              <li>Contents</li>
+              <li>Featured content</li>
+              <li>Current events</li>
+              <li>Random article</li>
+              <li>Donate to Wikipedia</li>
+
             </ul>
           </div>
         </div>
@@ -45,49 +50,64 @@
               </div>
             </div>
           </div>
-          <div class="card" id="top"></div>
+          <div class="card" id="top">
+            <h3>Welcome to <a href="http://www.wikipedia.com">Wikipedia</a></h3>
+            <p>the free encyclopedia that anyone can edit</p>
+          </div>
           <div class="row" id="content_row">
             <div class="col-6">
-              <div class="panel_wrap_l" id="bleh">
-                <div class="card" id="top_l">
+              <div class="panel_wrap_l">
+                <div class="card top_l">
                   <div class="card-heading alert-success">
-                    <h2 class="card-title">Test</h2>
+                    <h5 class="card-title">From today's featured article</h5>
                   </div>
-                  <div class="card-body">
+                  <div class="card-body body-green">
                     <p>Test</p>
                   </div>
                 </div>
-                <div class="card" id="top_l">
+                <div class="card top_l">
                   <div class="card-heading alert-success">
-                    <h2 class="card-title">Test</h2>
+                    <h5 class="card-title">Did you know...</h5>
                   </div>
-                  <div class="card-body">
+                  <div class="card-body body-green">
                     <p>Test</p>
                   </div>
                 </div>
               </div>
             </div>
             <div class="col-6">
-              <div class="panel_wrap" id="blah">
-                <div class="card" id="top_l">
+              <div class="panel_wrap">
+                <div class="card top_l">
                   <div class="card-heading alert-info">
-                    <h2 class="card-title">Test</h2>
+                    <h5 class="card-title">In the news</h5>
                   </div>
-                  <div class="card-body">
+                  <div class="card-body body-blue">
                     <p>Test</p>
                   </div>
                 </div>
-                <div class="card " id="top_l">
+                <div class="card top_l">
                   <div class="card-heading alert-info">
-                    <h2 class="card-title">Test</h2>
+                    <h5 class="card-title">On this day...</h5>
                   </div>
-                  <div class="card-body">
+                  <div class="card-body body-blue">
                     <p>Test</p>
                   </div>
                 </div>
               </div>
             </div>
           </div>
+          <div class="row">
+            <div class="col-12">
+              <div class="card">
+                <div class="card-heading alert-danger">
+                  <h5 class="card-title">From today's featured list</h5>
+                </div>
+                <div class="card-body body-red top_l">
+                  <p>Here is some text.  Lalalalalalalalala</p>
+                </div>
+              </div>
+            </div>
+        </div>
         </div>
       </div>
 
