switched sidebar nav from plain ul to bootstrap nav and added dummy links on that nav

--- a/wiki.html
+++ b/wiki.html
@@ -18,15 +18,24 @@
             <img class="logo" src="images/logo.png" alt="logo">
           </div>
           <div class="wrap">
-            <ul class="sidebar">
-              <li>Main page</li>
-              <li>Contents</li>
-              <li>Featured content</li>
-              <li>Current events</li>
-              <li>Random article</li>
-              <li>Donate to Wikipedia</li>
+<!--            <ul class="sidebar nav flex-column">
+              <li class="nav-item"><a class="nav-link">Main page</a></li>
+              <li class="nav-item"><a class="nav-link">Contents</a></li>
+              <li class="nav-item"><a class="nav-link">Featured content</a></li>
+              <li class="nav-item"><a class="nav-link">Current events</a></li>
+              <li class="nav-item"><a class="nav-link">Random article</a></li>
+              <li class="nav-item"><a class="nav-link">Donate to Wikipedia</a></li>
 
             </ul>
+          -->
+            <nav class="sidebar nav flex-column">
+              <a class="nav-link" href="#">Main page</a></li>
+              <a class="nav-link" href="#">Contents</a></li>
+              <a class="nav-link" href="#">Featured content</a></li>
+              <a class="nav-link" href="#">Current events</a></li>
+              <a class="nav-link" href="#">Random article</a></li>
+              <a class="nav-link" href="#">Donate to Wikipedia</a></li>
+            </nav>
           </div>
         </div>
         <div class="col-10">
